--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                                 - Independently designed software like Keying Solution and Performance Benchmarking
                                 Automation which contributed to the client's success. <br> </p>
                         </div>
-                        <div class="position-relative mb-4">
+                        <!-- <div class="position-relative mb-4">
                             <span class="bi bi-arrow-right fs-4 text-light position-absolute"
                                 style="top: -5px; left: -50px;"></span>
                             <h5 class="mb-1">Web Designer</h5>
@@ -261,7 +261,7 @@
                             <p>Tempor eos dolore amet tempor dolor tempor. Dolore ea magna sit amet dolor eirmod. Eos
                                 ipsum est tempor dolor. Clita lorem kasd sed ea lorem diam ea lorem eirmod duo sit ipsum
                                 stet lorem diam</p>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
                 <!-- Expericence End -->
