--- a/index.html
+++ b/index.html
@@ -52,28 +52,30 @@
                     <h1 class="text-primary mt-2">Hrushikesh Adya</h1>
                     <div class="mb-4" style="height: 22px;">
                         <h4 class="typed-text-output d-inline-block text-light"></h4>
-                        <div class="typed-text d-none">AWS Solution Architect, Backend Developer, Big Data Engineer,
-                            Cloud Infrastructure Engineer, Automations Expert</div>
+                        <div class="typed-text d-none">AWS Solution Architect, Backend Developer, Big Data Engineer, Cloud Infrastructure
+                            Engineer, Automations Expert</div>
                     </div>
                     <div class="d-flex justify-content-center mt-auto mb-3">
-                        <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="btn btn-secondary btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-secondary btn-square mx-1" href="https://www.linkedin.com/in/hrushikesh-adya/" target="_blank"><i
+                                class="fab fa-linkedin-in"></i></a>
+                        <a class="btn btn-secondary btn-square mx-1" href="https://www.instagram.com/hrushi.adya_25/" target="_blank"><i
+                                class="fab fa-instagram"></i></a>
                     </div>
                     <div class="d-flex align-items-end justify-content-between border-top">
-                        <a href="" class="btn w-50 border-end">Download CV</a>
-                        <a href="#contact" class="btn w-50 btn-scroll">Contact Me</a>
+                        <a href="https://drive.google.com/file/d/1cp2k80Zc79V46EpMAAkdW2247ybneHjY/view?usp=drive_link"
+                            class="btn w-50 border-end">Download CV</a>
+                        <a href="https://www.linkedin.com/in/hrushikesh-adya/" class="btn w-50" target="_blank">Message Me</a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-8">
                 <!-- About Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="title pb-3 mb-5">Website Under Construction... <br>Portfolio will be up very soon</h1>
                     <h1 class="title pb-3 mb-5">About Me</h1>
-                    <p>A Passionate Software Engineer with great experience in Backend Development and Automations. 2.5
-                        Years of work experience with building resilient softwares in FinTech Industry.<br><br>
+                    <p>
+                    <h4>A Passionate Software Engineer with great experience in <u><b>Backend Development and Automations.</b></u> <u><b>2.5
+                                Years</b></u> of work experience with building resilient softwares in <u><b>FinTech Industry.</b></u></h4>
+                    <br><br>
                         - Proficient with the following programming languages: <b>Python, Golang, Java, C, x86
                             Assembly.</b><br>
                         - Knowledge of using following AWS Services: <b>Lambda, Rekognition, Sagemaker, API Gateway,
@@ -181,7 +183,7 @@
                         <div class="col-sm-6">
                             <div class="skill mb-4">
                                 <div class="d-flex justify-content-between">
-                                    <p class="mb-2">Java</p>
+                                    <p class="mb-2">AI/ML</p>
                                     <p class="mb-2">85%</p>
                                 </div>
                                 <div class="progress">
@@ -267,7 +269,7 @@
                 <!-- Expericence End -->
 
                 <!-- Subscribe Start -->
-                <section class="wow fadeInUp" data-wow-delay="0.1s">
+                <!-- <section class="wow fadeInUp" data-wow-delay="0.1s">
                     <div class="bg-secondary text-center p-5">
                         <h1 class="text-white font-weight-bold">Subscribe My Newsletter</h1>
                         <p class="text-white">Subscribe and get my latest article in your inbox</p>
@@ -278,51 +280,61 @@
                                 class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Subscribe</button>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Subscribe End -->
 
-                <!-- Services Start -->
+                <!-- Skills Start -->
                 <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
-                    <h1 class="title pb-3 mb-5">Services</h1>
+                    <h1 class="title pb-3 mb-5">Professional Skills</h1>
                     <div class="row g-4">
-                        <div class="col-md-6">
-                            <div class="service-item">
-                                <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
-                                <h5 class="mb-2">Web Design</h5>
-                                <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet
-                                    lorem lorem lorem est amet labore</p>
-                            </div>
-                        </div>
+                        
                         <div class="col-md-6">
                             <div class="service-item">
                                 <i class="fab fa-2x fa-android mx-auto mb-4"></i>
-                                <h5 class="mb-2">Apps Development</h5>
-                                <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet
-                                    lorem lorem lorem est amet labore</p>
+                                <h5 class="mb-2">Backend Development</h5>
+                                <p class="mb-0">Experience of developing professional backend with Python, Java and Golang with AWS Infrastructure and
+                                    basic knowledge of Terraform</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
                                 <i class="fa fa-2x fa-search mx-auto mb-4"></i>
-                                <h5 class="mb-2">SEO</h5>
-                                <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet
-                                    lorem lorem lorem est amet labore</p>
+                                <h5 class="mb-2">AWS Development</h5>
+                                <p class="mb-0">AWS Certified Solution Architect. Experience of using most commonly used AWS services mentioned in about
+                                    me section and resume.</p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="service-item">
                                 <i class="fa fa-2x fa-edit mx-auto mb-4"></i>
-                                <h5 class="mb-2">Content Creating</h5>
-                                <p class="mb-0">Justo sit justo eos amet tempor amet clita amet ipsum eos elitr. Amet
-                                    lorem lorem lorem est amet labore</p>
+                                <h5 class="mb-2">Automations</h5>
+                                <p class="mb-0">Experineced developer with Apache Airflow and Jenkins. Created Multiple Pipelines with Jenkins to Handle
+                                    Complex AWS Operations and Software Release Processes.</p>
                             </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="service-item">
+                                <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
+                                <h5 class="mb-2">AI/ML</h5>
+                                <p class="mb-0">Experienced with using Sentence Transformer and clip-ViT-B-32 Model to create
+                                    the vector embeddings and train a model. Experienced with using the OpenAI
+                                    API to automate chatbot operations.</p>
+                            </div>
+                        </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="service-item">
+                                <i class="fa fa-2x fa-laptop-code mx-auto mb-4"></i>
+                                <h5 class="mb-2">Web Design</h5>
+                                <p class="mb-0">Experienced Web Developement Professional with knowledge of HTML, Advance CSS Libraries:
+                                    Tailwind and DaisyUI and React JS & NextJS Framework.</p>
                         </div>
                     </div>
                 </section>
                 <!-- Services End -->
 
                 <!-- Portfolio Start -->
-                <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
+                <!-- <section class="py-5 border-bottom wow fadeInUp" data-wow-delay="0.1s">
                     <h1 class="title pb-3 mb-5">Portfolio</h1>
                     <div class="row">
                         <div class="col-12">
@@ -345,7 +357,7 @@
                             <div class="row portfolio-container">
                                 <div class="col-md-6 mb-4 portfolio-item first">
                                     <h4>Social AI Recommendation Engine</h4>
-                                    <!-- <div class="position-relative overflow-hidden mb-2">
+                                    <div class="position-relative overflow-hidden mb-2">
                                         <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="Source Code">
                                         <div class="portfolio-btn d-flex align-items-center justify-content-center">
                                             <a href="https://github.com/hrushi-adya/edm-data-analysis"
@@ -354,7 +366,7 @@
 
                                             </a>
                                         </div>
-                                    </div> -->
+                                    </div>
                                     <div class="position-relative overflow-hidden mb-2">
                                         <a href="https://github.com/hrushi-adya/edm-data-analysis" target="_blank"
                                             data-lightbox="portfolio">
@@ -399,7 +411,7 @@
                             </div>
                         </div>
                     </div>
-                </section>
+                </section> -->
                 <!-- Portfolio End -->
 
                 <!-- Testimonial Start -->
@@ -496,21 +508,13 @@
                 <section class="wow fadeIn" data-wow-delay="0.1s">
                     <div class="bg-secondary text-light text-center p-5">
                         <div class="d-flex justify-content-center mb-4">
-                            <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
-                            <a class="btn btn-dark btn-square mx-1" href="#"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-square mx-1" href="https://www.linkedin.com/in/hrushikesh-adya/"><i
+                                    class="fab fa-linkedin-in"></i></a>
+                            <a class="btn btn-dark btn-square mx-1" href="https://www.instagram.com/hrushi.adya_25/"><i
+                                    class="fab fa-instagram"></i></a>
                         </div>
-                        <div class="d-flex justify-content-center mb-3">
-                            <a class="text-light px-3 border-end" href="#">Privacy</a>
-                            <a class="text-light px-3 border-end" href="#">Terms</a>
-                            <a class="text-light px-3 border-end" href="#">FAQs</a>
-                            <a class="text-light px-3" href="#">Help</a>
-                        </div>
-
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        <p class="m-0">&copy; All Rights Reserved. Designed by <a href="https://htmlcodex.com">HTML
-                                Codex</a></p>
+                    
+                        <p class="m-0">Designed by Hrushikesh Adya</a></p>
                     </div>
                 </section>
                 <!-- Footer End -->
